samples/_failures_safe/1761492847_836d1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd520667.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_bd520667.c:191:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  191 |                 struct GraphNode* neighbor
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_bd520667.c:191:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd520667.c:191:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd520667.c:191:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd520667.c:191:24: error: expected declaration or statement at end of input
